# lua_cpp

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTEXT_SETUP.md  CPP_IMPLEMENTATION_FRAMEWORK.md  CPP_IMPLEMENTATION_FRAMEWORK_CN.md  DEVELOPMENT_PROGRESS.md  IMPLEMENTATION_MILESTONES.md  IMPLEMENTATION_MILESTONES_CN.md  LUA_SOURCE_ANALYSIS.md  LUA_SOURCE_ANALYSIS_CN.md  LuaCpp.sln  PROJECT_DASHBOARD.md  PROJECT_STATUS.md  PROJECT_STATUS_SNAPSHOT.md  QUICK_START.md  README.md  README_CN.md  REFERENCE_ANALYSIS.md  SPEC_KIT_COMPLIANCE_REPORT.md  T025_VM_COMPLETION_REPORT.md  T026_COMPLETION_REPORT.md  T027_COMPLETION_REPORT.md  T028_MASTER_GUIDE.md  T028_PHASE2_COMPLETION_REPORT.md  T028_PROGRESS_REPORT.md  T028_QUICK_START.md  T028_README.md  TODO.md  build_test_t027.ps1  build_test_t027.sh  ci.yml  example_contract_setup.cpp  gc_standalone.h  gc_test_suite.cpp  lua.sln  simple_test.cpp  (+3 more)
Examples/: Examples.vcxproj  main.cpp
LuaCore/: LuaCore.vcxproj  LuaCore.vcxproj.bak  LuaCore.vcxproj.new
Tests/: Tests.vcxproj  main.cpp
cmake/: lua_cpp_config.cmake.in
commands/: AI_WORKFLOW_GUIDE.md  analyze.md  clarify.md  constitution.md  implement.md  plan.md  tasks.md
docs/: CPP20_COROUTINE_REFERENCE.md  DEVELOPMENT_QUALITY_CHECKLIST.md  DEVELOPMENT_WORKFLOW.md  OPTIMIZATION_COMPLETION_REPORT.md  QUALITY_STANDARDS.md  README.md  REFERENCE_PROJECT_ANALYSIS.md  SPEC_KIT_INTEGRATION_GUIDE.md  T026_ADVANCED_CALL_STACK_SPEC.md  T028_PHASE3_3_COMPLETION_REPORT.md  T028_PHASE3_3_PROGRESS.md  T028_PHASE3_3_REFACTOR_REPORT.md  T028_PHASE3_SECTION1_REPORT.md  T028_PHASE3_SECTION2_REPORT.md  T028_VM_ARCHITECTURE_ANALYSIS.md  T028_VM_REFACTOR_SIMPLIFIED.md
examples/: T026_integration_example.cpp
src/: CMakeLists.txt  lua.cpp  lua_test.cpp
src/api/: lua_api.h  luaaux.h
src/cli/: lua_cli.cpp
src/common/: config.hpp  types.hpp
src/compiler/: ast.hpp  ast_base.h  bytecode.h  bytecode_generator.cpp  bytecode_generator.h  compiler.cpp  compiler.h  compiler.hpp  compiler_expressions.cpp  compiler_statements.cpp  constant_pool.cpp  constant_pool.h  debug_info.cpp  debug_info.h  lexer.cpp  lexer.hpp  optimizer.cpp  optimizer.h  parser.cpp  parser.hpp  register_allocator.cpp  register_allocator.h
src/gc/: allocator.cpp  allocator.hpp  garbage_collector.cpp  garbage_collector.hpp  gc_manager.hpp  gc_object.hpp
src/lexer/: lexer.cpp  lexer.h  lexer_errors.cpp  lexer_errors.h  lexer_old.cpp  token.cpp  token.h
src/lib/: baselib.cpp  baselib.hpp  error_utils.hpp  lib.cpp  lib.hpp  mathlib.cpp  mathlib.hpp  stringlib.cpp  stringlib.hpp
src/memory/: garbage_collector.cpp  garbage_collector.h  memory_manager.cpp  memory_manager.h
src/object/: function.cpp  function.hpp  object_types.hpp  string.cpp  string.hpp  table.cpp  table.hpp  thread.cpp  thread.hpp  userdata.cpp  userdata.hpp  value.cpp  value.hpp
src/parser/: ast.cpp  ast.h  parser.cpp  parser.h  parser_error_recovery.cpp  parser_error_recovery.h
src/stdlib/: base_lib.cpp  base_lib.h  coroutine_lib.cpp  coroutine_lib.h  math_lib.cpp  math_lib.h  stdlib.cpp  stdlib.h  stdlib_common.cpp  stdlib_common.h  string_lib.cpp  string_lib.h  table_lib.cpp  table_lib.h
src/types/: lua_table.cpp  lua_table.h  value.h
src/vm/: call_frame.cpp  call_frame.h  call_stack.h  call_stack_advanced.cpp  call_stack_advanced.h  callinfo.cpp  callinfo.hpp  coroutine_support.cpp  coroutine_support.h  enhanced_virtual_machine.cpp  enhanced_virtual_machine.h  function_proto.hpp  instruction.hpp  instruction_executor.cpp  simple_call_stack.cpp  simple_call_stack.h  stack.cpp  stack.h  state.cpp  state.hpp  upvalue_manager.cpp  upvalue_manager.h  virtual_machine.cpp  virtual_machine.h  vm.cpp  vm.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test_error_recovery_basic.cpp  test_error_recovery_simple.cpp  test_parser_error_recovery.cpp
tests/T026_tests/: T026_benchmark_tests.cpp  T026_performance_analyzer.cpp
tests/benchmark/: test_t026_benchmark.cpp
tests/contract/: test_api_contract.cpp  test_c_api_basic_contract.cpp  test_c_api_call_contract.cpp  test_call_stack_advanced_contract.cpp  test_compiler_contract.cpp  test_coroutine_support_contract.cpp  test_function_contract.cpp  test_gc_contract.cpp  test_lexer_contract.cpp  test_memory_contract.cpp  test_parser_contract.cpp  test_state_contract.cpp  test_string_contract.cpp  test_table_contract.cpp  test_tvalue_contract.cpp  test_upvalue_manager_contract.cpp  test_vm_contract.cpp
tests/integration/: gc_test.cpp  test_compiler_integration.cpp  test_lua515_compatibility.cpp  test_regression_boundary.cpp  test_script_execution_integration.cpp  test_stdlib_integration.cpp  test_t026_integration.cpp  vm_test.cpp
tests/unit/: CMakeLists.txt  CMakeLists_api.txt  test_call_stack_advanced_unit.cpp  test_compiler_unit.cpp  test_coroutine_lib_api.cpp  test_coroutine_lib_minimal.cpp  test_lexer_error_handling.cpp  test_t027_stdlib_unit.cpp  test_t028_coroutine_unit.cpp  test_upvalue_manager_unit.cpp  test_vm_benchmark.cpp  test_vm_integration.cpp  test_vm_unit.cpp
tests/unit/build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  T028_Coroutine_Minimal_Test.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  test_coroutine_minimal.vcxproj  test_coroutine_minimal.vcxproj.filters
tests/unit/build_minimal/test_coroutine_minimal.dir/Debug/: test_coroutine_minimal.exe.recipe
tests/unit/build_minimal/test_coroutine_minimal.dir/Debug/test_cor.37F70866.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/unit/build_minimal/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
tests/unit/build_minimal/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
tests/unit/build_minimal/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
tests/unit/build_minimal/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+115 files in other folders)
